# SFMLSim

01_bouncing_ball/: CMakeLists.txt
01_bouncing_ball/src/: Ball.cpp  Ball.hpp  main.cpp
02_collisions/: CMakeLists.txt
02_collisions/src/: Vector.hpp  main.cpp
